# dreamlake

./: .env.template  .env.test  .gitignore  API_CHANGES.md  ML_DASH_ISSUE_DRAFT.md  README.md  pyproject.toml
docs/: 01-getting-started.md  02-sessions.md  03-logging.md  06-files.md  07-local-vs-remote.md  API_DESIGN.md  API_QUICK_REFERENCE.md  README.md  api-quick-reference.md  architecture.md  basic-training.md  cli.md  complete-examples.md  conf.py  deployment.md  examples.md  faq.md  files.md  getting-started.md  hyperparameter-search.md  index.rst  local-vs-remote.md  logging.md  model-comparison.md  overview.md  parameters.md  quickstart.md  requirements.txt  sessions.md  testing.md  tracks.md
docs/_static/: custom.css
docs/api/: client.rst  files.rst  log.rst  modules.rst  params.rst  session.rst  storage.rst  track.rst
docs/examples/: 01_basic_session.py  02_logging_example.py  03_parameters_example.py  04_tracks_example.py  05_files_example.py  06_complete_training.py  07_time_range_queries.py  08_batch_columnar_format.py  README.md  README_COLUMNAR_FORMAT.md  three_usage_styles.py  timestamp_sync_example.py
src/dreamlake/: __init__.py  cli.py  client.py  config.py  episode.py  files.py  log.py  params.py  session.py  storage.py  track.py
src/dreamlake/api/: video.py  (+7 more)
test/: README.md  conftest.py  test_api.py  test_basic_session.py  test_cli_notice.py  test_concurrent_all.py  test_concurrent_files.py  test_files.py  test_integration.py  test_logging.py  test_parameters.py  test_remote_stub.py  test_session.py  test_timestamp_features.py  test_tracks.py
(+109 files in other folders)
