[project]
name = "dreamlake"
version = "0.2.1"
description = "Python SDK for dreamlake - ML experiment tracking and data storage"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ge Yang"},
    {name = "Tom Tao"}
]
keywords = ["machine-learning", "experiment-tracking", "mlops", "data-storage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.uv]
[tool.uv.scripts]
docs = "mkdocs build"
preview = "mkdocs serve"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
